# CapShim-Apart-Research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  slides.html
docs/: 2026-05-24-capshim-design.md
evals/: demo_one.py  results.json  run_evals.py  scenarios.py
examples/: policy.yaml
examples/servers/: toy_mcp_server.py
paper/: main.tex  references.bib
src/capshim/: __init__.py  checker.py  labels.py  policy.py  proxy.py  schema.py
tests/: test_checker.py  test_labels.py  test_policy.py  test_proxy.py
