[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capshim"
version = "0.1.0"
description = "Capability-typed shim for the Model Context Protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fatimah Emad Eldin", email = "Fatimah@trouve.works" },
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "hypothesis>=6.92",
]

[project.scripts]
capshim-eval = "evals.run_evals:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
